--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -3568,14 +3568,14 @@ d.toLocaleTimeString('en-US', {
 `Date`对象提供了一系列`get*`方法，用来获取实例对象某个方面的值。
 
 - `getTime()`：返回实例距离1970年1月1日00:00:00的毫秒数，等同于`valueOf`方法。
-- `getDate()`：返回实例对象对应每个月的几号（从1开始）。
-- `getDay()`：返回星期几，星期日为0，星期一为1，以此类推。
 - `getFullYear()`：返回四位的年份。
 - `getMonth()`：返回月份（0表示1月，11表示12月）。
+- `getDate()`：返回实例对象对应每个月的几号（从1开始）。
 - `getHours()`：返回小时（0-23）。
-- `getMilliseconds()`：返回毫秒（0-999）。
 - `getMinutes()`：返回分钟（0-59）。
 - `getSeconds()`：返回秒（0-59）。
+- `getMilliseconds()`：返回毫秒（0-999）。
+- `getDay()`：返回星期几，星期日为0，星期一为1，以此类推。
 - `getTimezoneOffset()`：返回当前时间与 UTC 的时区差异，以分钟表示，返回结果考虑到了夏令时因素。
 
 所有这些`get*`方法返回的都是整数，不同方法返回值的范围不一样。
@@ -3600,7 +3600,7 @@ d.getTimezoneOffset() // -480
 下面是一个例子，计算本年度还剩下多少天。
 
 ```js
-unction leftDays() {
+function leftDays() {
   var today = new Date();
   var endYear = new Date(today.getFullYear(), 11, 31, 23, 59, 59, 999);
   var msPerDay = 24 * 60 * 60 * 1000;
@@ -3719,7 +3719,7 @@ var regex = /xyz/;
 var regex = new RegExp('xyz');
 ```
 
-上面两种写法是等价的，都新建了一个内容为`xyz`的正则表达式对象。它们的主要区别是，第一种方法在==引擎编译代码时==，就会新建正则表达式，第二种方法在==运行时==新建正则表达式，所以前者的效率较高。而且，前者比较便利和直观，所以实际应用中，基本上都采用字面量定义正则表达式。
+上面两种写法是等价的，都新建了一个内容为`xyz`的正则表达式对象。它们的主要区别是，第一种方法在引擎编译代码时，就会新建正则表达式，第二种方法在运行时新建正则表达式，所以前者的效率较高。而且，前者比较便利和直观，所以实际应用中，基本上都采用字面量定义正则表达式。
 
 `RegExp`构造函数还可以接受第二个参数，表示修饰符（详细解释见下文）。
 
@@ -3810,7 +3810,7 @@ r.test(s)//true
 
 上面代码指定从字符串的第五个位置开始搜索，这个位置为空，所以返回`false`。同时，`lastIndex`属性重置为`0`，所以第二次执行`r.test(s)`会返回`true`。
 
-注意，带有`g`修饰符时，正则表达式内部会记住上一次的`lastIndex`属性，这时不应该更换所要匹配的字符串，否则会有一些难以察觉的错误。
+> 注意：带有`g`修饰符时，正则表达式内部会记住上一次的`lastIndex`属性，这时不应该更换所要匹配的字符串，否则会有一些难以察觉的错误。
 
 ```js
 var r = /bb/g;
