--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -18,9 +18,9 @@
 
 面向对象编程的第一步，就是要生成对象。前面说过，对象是单个实物的抽象。通常需要一个模板，表示某一类实物的共同特征，然后对象根据这个模板生成。
 
-典型的面向对象编程语言（比如 C++ 和 Java），都有“类”（class）这个概念。**所谓“类”就是对象的模板，对象就是“类”的实例**。但是，==JavaScript 语言的对象体系，不是基于“类”的，而是基于构造函数（constructor）和原型链（prototype）==。
+典型的面向对象编程语言（比如 C++ 和 Java），都有“类”（class）这个概念。**所谓“类”就是对象的模板，对象就是“类”的实例**。但是，JavaScript 语言的对象体系，不是基于“类”的，而是基于构造函数（constructor）和原型链（prototype）。
 
-==JavaScript 语言使用构造函数（constructor）作为对象的模板==。**所谓”构造函数”，就是专门用来生成实例对象的函数**。它就是对象的模板，描述实例对象的基本结构。一个构造函数，可以生成多个实例对象，这些实例对象都有相同的结构。
+JavaScript 语言使用构造函数（constructor）作为对象的模板。**所谓”构造函数”，就是专门用来生成实例对象的函数**。它就是对象的模板，描述实例对象的基本结构。一个构造函数，可以生成多个实例对象，这些实例对象都有相同的结构。
 
 构造函数就是一个普通的函数，但是有自己的特征和用法。
 
@@ -124,7 +124,7 @@ Fubar(1, 2)._foo // 1
 
 #### 1.3.2new命令的原理
 
-使用`new`命令时，它后面的函数依次执行下面的步骤。
+使用`new`命令时，它后面的函数依次执行下面的步骤：
 
 1. 创建一个空对象，作为将要返回的对象实例。
 2. 将这个空对象的原型，指向构造函数的`prototype`属性。
