--- a/React/01.React教程.md
+++ b/React/01.React教程.md
@@ -2318,7 +2318,7 @@ export default class App extends Component {
 }
 ```
 
-**注意**：点击不会有任何反应，因为我们修改了state之后，希望React根据最新的State来重新渲染界面，但是这种方式的修改React并不知道数据发生了变化；React并没有实现类似于Vue2中的`Object.defineProperty`或者Vue3中的`Proxy`的方式来监听数据的变化；我们必须通过setState来告知React数据已经发生了变化；
+**注意**：点击不会有任何反应，因为我们修改了state之后，希望React根据最新的State来重新渲染界面，但是这种方式的修改React并不知道数据发生了变化；React并没有实现类似于Vue2中的`Object.defineProperty`或者Vue3中的`Proxy`的方式来监听数据的变化；我们必须通过`setState`来告知React数据已经发生了变化；
 
 我们必须通过setState来更新数据：
 
