--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -1392,7 +1392,7 @@ const enhancer = applyMiddleware(thunkMiddleware);
 const store = createStore(reducer, enhancer);
 ```
 
-3. 定义返回一个函数的action
+### 10.2.3定义返回一个函数的action
 
 - 注意：这里不是返回一个对象了，而是一个函数；
 - 该函数在dispatch之后会被执行；
@@ -1409,7 +1409,7 @@ const getHomeMultidataAction = () => {
 }
 ```
 
-4. 修改home.js中的代码：
+### 10.2.4修改home.js中的代码：
 
 ```js
 import React, { PureComponent } from 'react';
