--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -262,7 +262,7 @@ o2.toString() // "[object Object]"
 字符串`[object Object]`本身没有太大的用处，但是通过自定义`toString`方法，可以让对象在自动类型转换时，得到想要的字符串形式。
 
 ```js
-ar obj = new Object();
+var obj = new Object();
 
 obj.toString = function () {
   return 'hello';
@@ -2041,7 +2041,7 @@ var v1 = new Number(123);
 var v2 = new String('abc');
 var v3 = new Boolean(true);
 
-typeof v1 // "object"
+typeof v1 // "object
 typeof v2 // "object"
 typeof v3 // "object"
 
@@ -2805,7 +2805,7 @@ one + two + three // "33"
 // "HELLO WORLD"
 ```
 
-#### 7.4.10.String.prototype.match()
+#### 7.4.10.`String.prototype.match()`
 
 `match`方法用于确定原字符串是否匹配某个子字符串，返回一个数组，成员为匹配的第一个字符串。如果没有找到匹配，则返回`null`。
 
