--- a/React/01.React教程.md
+++ b/React/01.React教程.md
@@ -2352,15 +2352,15 @@ changeText() {
 
 设计异步更新原因：
 
-- `setState`设计为异步，可以显著的提升性能；
+1. `setState`设计为异步，可以显著的提升性能；
 
-  - 如果每次调用 setState都进行一次更新，那么意味着render函数会被频繁调用，界面重新渲染，这样效率是很低的；
+   - 如果每次调用 setState都进行一次更新，那么意味着render函数会被频繁调用，界面重新渲染，这样效率是很低的；
 
-  - 最好的办法应该是获取到多个更新，之后进行批量更新；
 
-- 如果同步更新了state，但是还没有执行render函数，那么state和props不能保持同步；
+   - 最好的办法应该是获取到多个更新，之后进行批量更新；
 
-  - state和props不能保持一致性，会在开发中产生很多的问题；
+2. 如果同步更新了state，但是还没有执行render函数，那么state和props不能保持同步；
+   - state和props不能保持一致性，会在开发中产生很多的问题；
 
 
 那么如何可以获取到更新后的值呢？
