新增前端项目的node和包管理器笔记

--- a/CSS/09.scss.md
+++ b/CSS/09.scss.md
@@ -54,7 +54,7 @@ npm install sass -S -D
 
 ## 2.变量
 
-sass使用`$`符号来标识变量。变量的作用就是，让你在整个样式表中保存并重用一些信息或数据。比如存储颜色(color)、字体集，或任何你想重用的CSS值。
+sass使用`$`符号来标识变量。变量的作用就是：让你在整个样式表中保存并重用一些信息或数据。比如存储颜色(color)、字体集，或任何你想重用的CSS值。
 
 ### 2.1变量声明
 
@@ -129,7 +129,7 @@ $highlight-border: 1px solid $highlight-color;
 
 ### 2.3. 变量名中的中横线(`hyphen`)和下划线(`underscore`)
 
-sass的变量名可以使用中划线和下划线，用中划线声明的变量可以使用下划线的方式引用，反之亦然。也就是，变量名中的中横线和下划线没有区别，两者互通。比如下面的示例，中横线的`$link-color`，可以通过下划线的`$link_color`引用。
+sass的变量名可以使用中划线和下划线，*用中划线声明的变量可以使用下划线的方式引用*，反之亦然。也就是，变量名中的中横线和下划线没有区别，两者互通。比如下面的示例，中横线的`$link-color`，可以通过下划线的`$link_color`引用。
 
 ```scss
 $link-color: blue;
