--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -97,7 +97,7 @@ Redux的核心理念非常简单。比如我们有一个朋友列表需要管理
 - 比如另一个页面通过`products[0].age = 25`修改了一条数据；
 - 整个应用程序错综复杂，当出现bug时，很难跟踪到底哪里发生的变化；
 
-```js
+```jsx
 const initialState = {
   friends: [
     { name: "why", age: 18 },
@@ -117,7 +117,7 @@ Redux要求我们通过action来更新数据：
 - 强制使用action的好处是可以清晰的知道数据到底发生了什么样的变化，所有的数据变化都是可跟追、可预测的；
 - 当然，目前我们的action是固定的对象，真实应用中，我们会通过函数来定义，返回一个action；
 
-```js
+```jsx
 const action1 = { type: "ADD_FRIEND", info: { name: "lucy", age: 20 } }
 const action2 = { type: "INC_AGE", index: 0 }
 const action3 = { type: "CHANGE_NAME", playload: { index: 0, newName: "coderwhy" } }
@@ -128,7 +128,7 @@ const action3 = { type: "CHANGE_NAME", playload: { index: 0, newName: "coderwhy"
 - reducer是一个纯函数；
 - reducer做的事情就是将传入的state和action结合起来生成一个新的state；
 
-```js
+```jsx
 /*
 * state为原来的state，一定不要修改原来的state，因为是纯函数
 * action
@@ -186,7 +186,7 @@ function reducer(state = initialState, action) {
 
 # 5.redux的基本使用
 
-- 安装redux
+安装redux:
 
 ```bash
 npm install redux --save
@@ -222,7 +222,7 @@ yarn add redux
 
 1.创建一个对象，作为我们要保存的状态：
 
-```js
+```jsx
 const redux = require('redux');
 
 const initialState = {
@@ -235,7 +235,7 @@ const initialState = {
 - 创建store时必须创建reducer；
 - 我们可以通过 `store.getState` 来获取当前的state
 
-```js
+```jsx
 // 创建reducer
 const reducer = (state = initialState, action) => {
   return state;
@@ -252,7 +252,7 @@ console.log(store.getState());
 - 通过dispatch来派发action；
 - 通常action中都会有type属性，也可以携带其他的数据；
 
-```js
+```jsx
 store.dispatch({
   type: "INCREMENT"
 })
@@ -272,7 +272,7 @@ store.dispatch({
 - 这里一定要记住，reducer是一个纯函数，不需要直接修改state；
 - 后面我会讲到直接修改state带来的问题；
 
-```js
+```jsx
 const reducer = (state = initialState, action) => {
   switch (action.type) {
     case "INCREMENT":
@@ -289,7 +289,7 @@ const reducer = (state = initialState, action) => {
 
 5.可以在派发action之前，监听store的变化：
 
-```js
+```jsx
 store.subscribe(() => {
   console.log(store.getState());
 })
@@ -297,7 +297,7 @@ store.subscribe(() => {
 
 完成的案例代码如下：
 
-```js
+```jsx
 const redux = require('redux');
 
 const initialState = {
@@ -369,7 +369,7 @@ store.dispatch({
 
 创建store/index.js文件：
 
-```js
+```jsx
 import redux from 'redux';
 import reducer from './reducer.js';
 
@@ -380,7 +380,7 @@ export default store;
 
 创建store/reducer.js文件：
 
-```js
+```jsx
 import { ADD_NUMBER , SUB_NUMBER } from './constants.js';
 const initialState = {
   counter: 0
@@ -402,7 +402,7 @@ export default reducer;
 
 创建store/actionCreators.js文件：
 
-```js
+```jsx
 import { ADD_NUMBER, SUB_NUMBER } from './constants.js'
 
 //一般使用箭头函数
@@ -421,7 +421,7 @@ export { addAction, subAction }
 
 创建store/constants.js文件：
 
-```js
+```jsx
 const ADD_NUMBER = "ADD_NUMBER";
 const SUB_NUMBER = "SUB_NUMER";
 
@@ -435,7 +435,7 @@ export {
 
 index.js
 
-```js
+```jsx
 import store from './store/index.js';
 
 // 导入action
@@ -479,7 +479,7 @@ store.dispatch(decAction());
 
 ## 8.1全局定义
 
-- constants常量文件:
+constants常量文件:
 
 ```js
 // constants.js
@@ -513,7 +513,7 @@ src
 
 ### 8.2.2创建store入口文件
 
-```js
+```jsx
 /* store/index.js */
 // 导出创建store的函数
 import { createStore } from 'redux';
@@ -527,7 +527,7 @@ export default store;
 
 ### 8.2.3创建reducer
 
-```js
+```jsx
 // store/reducer.js
 import { ADD_NUMBER, SUB_NUMBER } from './constants.js';
 
@@ -551,7 +551,7 @@ export default reducer;
 
 ### 8.2.4创建action
 
-```js
+```jsx
 // store/actionCreators.js
 import { ADD_NUMBER, SUB_NUMBER } from './constants.js';
 // 定义增加action
@@ -571,7 +571,7 @@ export const subAction = num => ({
 
 在`about`组件使用：
 
-```js
+```jsx
 // pages/about.js
 import React, { PureComponent } from 'react';
 
@@ -630,7 +630,7 @@ export default class About extends PureComponent {
 
 在`home`组件使用：
 
-```js
+```jsx
 // pages/home.js
 import React, { PureComponent } from 'react';
 
@@ -690,8 +690,8 @@ export default class Home extends PureComponent {
 上面的代码是否可以实现`react组件`和`redux`结合起来呢？
 
 - 当然是可以的，但是我们会发现每个使用的地方其实会有一些重复的代码：
-- 比如监听store数据改变的代码，都需要在 `componentDidMount`中完成；
-- 比如派发事件，我们都需要去先拿到 `store`， 在调用其 `dispatch` 等；
+- 比如监听store数据改变的代码，都需要在`componentDidMount`中完成；
+- 比如派发事件，我们都需要去先拿到`store`，在调用其`dispatch`等；
 
 能否将这些公共的内容提取出来呢？
 
@@ -734,7 +734,7 @@ src
 
 ### 8.3.2封装高阶组件
 
-```js
+```jsx
 // utils/connect.js
 import React, { PureComponent } from "react";
 // 导入创建的store
@@ -795,7 +795,7 @@ export function connect(mapStateToProps, mapDispachToProp) {
 
 修改home组件：
 
-```js
+```jsx
 // pages/home.js
 import React, { PureComponent } from 'react';
 // 导入高阶函数
@@ -835,7 +835,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 修改about组件：
 
-```js
+```jsx
 // pages/about.js
 import React from 'react';
 import { connect } from '../utils/connect';
@@ -884,7 +884,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(About);
 
 1. 新建context文件
 
-```js
+```jsx
 // utils/context.js
 import React from 'react';
 const StoreContext = React.createContext(); 
@@ -898,7 +898,7 @@ export { StoreContext }
 
 2. 修改高阶函数connect
 
-```js
+```jsx
 // utils/connect.js
 import React, { PureComponent } from "react";
 // 导入创建的context
@@ -949,7 +949,7 @@ export function connect(mapStateToProps, mapDispachToProp) {
 
 3. 修改项目入口文件index.js
 
-```js
+```jsx
 import React from 'react';
 import ReactDOM from 'react-dom';
 import store from './store';
@@ -982,7 +982,7 @@ yarn add react-redux
 
 将之前使用的connect函数，换成react-redux的connect函数:
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 // 从react-redux库导入高阶函数connect
 import { connect } from "react-redux";
@@ -995,9 +995,9 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 将之前自己创建的Context的Provider，换成react-redux的Provider组件；
 
-> **注意**：这里传入的是store属性，而不是value属性（待会儿可以在源码中查看）;
+> **注意**：这里传入的是store属性，而不是value属性。
 
-```js
+```jsx
 // 从react-redux库导入Provider
 import { Provider } from 'react-redux';
 // 导入store
@@ -1015,7 +1015,7 @@ ReactDOM.render(
 
 1. 修改项目入口文件index.js
 
-```js
+```jsx
 import React from 'react';
 import ReactDOM from 'react-dom';
 
@@ -1036,7 +1036,7 @@ ReactDOM.render(
 
 2. 修改about组件：
 
-```js
+```jsx
 // pages/about.js
 import React from 'react';
 // import { connect } from '../utils/connect';
@@ -1097,7 +1097,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(About);
 
 3. 修改home组件
 
-```js
+```jsx
 // pages/home.js
 import React, { PureComponent } from 'react';
 
@@ -1179,7 +1179,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 1. 在reducer.js中添加state初始化数据和reducer函数中处理代码：
 
-```js
+```jsx
 const initialState = {
   counter: 0,
   banners: [],
@@ -1204,14 +1204,14 @@ function reducer(state = initialState, action) {
 
 2. constants中增加常量：
 
-```js
+```jsx
 const CHANGE_BANNER = "CHANGE_BANNER";
 const CHANGE_RECOMMEND = "CHANGE_RECOMMEND";
 ```
 
 3. actionCreators.js中添加actions：
 
-```js
+```jsx
 const changeBannersAction = (banners) => ({
   type: CHANGE_BANNER,
   banners
@@ -1227,7 +1227,7 @@ const changeRecommendsAction = (recommends) => ({
 
 1. Home组件：
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 import { connect } from "react-redux";
 
@@ -1275,7 +1275,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 2. Profile组件：
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 import { connect } from "react-redux";
 
@@ -1382,7 +1382,7 @@ yarn add redux-thunk
 - 通过applyMiddleware来结合多个Middleware, 返回一个enhancer；
 - 将enhancer作为第二个参数传入到createStore中；
 
-```js
+```jsx
 // store/index.js
 import { createStore, applyMiddleware, compose } from 'redux';
 import thunkMiddleware from 'redux-thunk';
@@ -1394,10 +1394,11 @@ const store = createStore(reducer, enhancer);
 
 ### 10.2.3定义返回一个函数的action
 
-- 注意：这里不是返回一个对象了，而是一个函数；
-- 该函数在dispatch之后会被执行；
+注意：这里不是返回一个对象了，而是一个函数；
 
-```js
+该函数在dispatch之后会被执行；
+
+```jsx
 const getHomeMultidataAction = () => {
   return (dispatch) => {
     axios.get("http://123.207.32.32:8000/home/multidata").then(res => {
@@ -1411,7 +1412,7 @@ const getHomeMultidataAction = () => {
 
 ### 10.2.4修改home.js中的代码：
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 import { connect } from "react-redux";
 
@@ -1424,7 +1425,6 @@ class Home extends PureComponent {
   componentDidMount() {
     this.props.getHomeMultidata();
   }
-
 }
 
 ...mapStatetoProps
@@ -1455,7 +1455,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 - 第一步：在对应的浏览器中安装相关的插件（比如Chrome浏览器扩展商店中搜索Redux DevTools即可，其他方法可以参考GitHub）；
 - 第二步：在redux中继承devtools
 
-```js
+```jsx
 import { createStore, applyMiddleware, compose } from 'redux';
 import thunkMiddleware from 'redux-thunk';
 import reducer from './reducer.js';
