--- a/React/03.ReactRouter.md
+++ b/React/03.ReactRouter.md
@@ -194,29 +194,32 @@ yarn add react-router-dom
 
 react-router最主要的API是给我们提供的一些组件：
 
-- `BrowserRouter`或`HashRouter`
-  - Router中包含了对路径改变的监听，并且会将相应的路径传递给子组件；
-  
-  - BrowserRouter使用history模式；
-  - HashRouter使用hash模式；
-  
-- `Link`和`NavLink`：
-  - 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
-  
-  - NavLink是在Link基础之上增加了一些样式属性；
-  - to属性：Link中最重要的属性，用于设置跳转到的路径；
-  
-- `Route`：
-  - Route用于路径的匹配；
-  
-  - path属性：用于设置匹配到的路径；
-  - component属性：设置匹配到路径后，渲染的组件；
-  - exact：精准匹配，只有精准匹配到完全一致的路径，才会渲染对应的组件；
+1. `BrowserRouter`或`HashRouter`
+
+- Router中包含了对路径改变的监听，并且会将相应的路径传递给子组件；
+
+- BrowserRouter使用history模式；
+- HashRouter使用hash模式；
+
+2. `Link`和`NavLink`：
+
+- 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
+
+- NavLink是在Link基础之上增加了一些样式属性；
+- to属性：Link中最重要的属性，用于设置跳转到的路径；
+
+3. `Route`：
+
+- Route用于路径的匹配；
+
+- path属性：用于设置匹配到的路径；
+- component属性：设置匹配到路径后，渲染的组件；
+- exact：精准匹配，只有精准匹配到完全一致的路径，才会渲染对应的组件；
 
 
 在App中进行如下演练:
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 
 import { BrowserRouter, Route, Link } from 'react-router-dom';
@@ -247,9 +250,7 @@ export default class App extends PureComponent {
 
 # 3.NavLink的使用
 
-路径选中时，对应的a元素变为红色。
-
-这个时候，我们要使用NavLink组件来替代Link组件：
+路径选中时，对应的a元素变为红色。这个时候，我们要使用NavLink组件来替代Link组件：
 
 - `activeStyle`：活跃时（匹配时）的样式；
 - `activeClassName`：活跃时添加的class；
@@ -257,18 +258,18 @@ export default class App extends PureComponent {
 
 先演示activeStyle：
 
-```js
+```jsx
 <NavLink to="/" activeStyle={{color: "red"}}>首页</NavLink>
 <NavLink to="/about" activeStyle={{color: "red"}}>关于</NavLink>
 <NavLink to="/profile" activeStyle={{color: "red"}}>我的</NavLink>
 ```
 
-但是，我们会发现在选中about或profile时，第一个也会变成红色：
+但是，我们会发现选中about或profile时，第一个也会变成红色：
 
 - 原因是`/`路径也匹配到了`/about`或`/profile`；
 - 这个时候，我们可以在第一个NavLink中添加上exact属性,代表精确匹配上才显示activeStyle；
 
-```js
+```jsx
 <NavLink exact to="/" activeStyle={{color: "red"}}>首页</NavLink>
 ```
 
@@ -285,7 +286,7 @@ a.active {
 
 当然，如果你担心这个class在其他地方被使用了，出现样式的层叠，也可以自定义class
 
-```js
+```jsx
 <NavLink exact to="/" activeClassName="link-active">首页</NavLink>
 <NavLink to="/about" activeClassName="link-active">关于</NavLink>
 <NavLink to="/profile" activeClassName="link-active">我的</NavLink>
@@ -300,7 +301,7 @@ a.active {
 - 当我们匹配到某一个路径时，我们会发现有一些问题；
 - 比如`/about`路径匹配到的同时，`/:userid`也被匹配到了，并且最后的一个NoMatch组件总是被匹配到；
 
-```js
+```jsx
 <Route exact path="/" component={Home} />
 <Route path="/about" component={About} />
 <Route path="/profile" component={Profile} />
@@ -317,7 +318,7 @@ a.active {
 - 只要匹配到了第一个，那么后面的就不应该继续匹配了；
 - 这个时候我们可以使用Switch来将所有的Route进行包裹即可；
 
-```js
+```jsx
 <Switch>
   <Route exact path="/" component={Home} />
   <Route path="/about" component={About} />
@@ -344,7 +345,7 @@ Redirect用于路由的重定向，当这个组件出现时，就会执行跳转
 
 App.js中提前定义好Login页面对应的Route：
 
-```js
+```jsx
 <Switch>
   ...其他Route
   <Route path="/login" component={Login} />
@@ -354,7 +355,7 @@ App.js中提前定义好Login页面对应的Route：
 
 在User.js中写上对应的逻辑代码：
 
-```js
+```jsx
 import React, { PureComponent } from 'react'
 import { Redirect } from 'react-router-dom';
 
@@ -387,7 +388,7 @@ export default class User extends PureComponent {
 - 商品列表和消息列表；
 - 点击不同的链接可以跳转到不同的地方，显示不同的内容；
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 
 import { Route, Switch, Link } from 'react-router-dom';
@@ -437,8 +438,9 @@ export default class About extends PureComponent {
 
 如何可以获取到history的对象呢？两种方式
 
-- 方式一：如果该组件是通过路由直接跳转过来的，那么可以直接获取history、location、match对象；
-- 方式二：如果该组件是一个普通渲染的组件，那么不可以直接获取history、location、match对象；
+1. 方式一：如果该组件是通过路由直接跳转过来的，那么可以直接获取history、location、match对象；
+
+2. 方式二：如果该组件是一个普通渲染的组件，那么不可以直接获取history、location、match对象；
 
 那么如果普通的组件也希望获取对应的对象属性应该怎么做呢？
 
@@ -447,12 +449,12 @@ export default class About extends PureComponent {
 
 如果我们希望在App组件中获取到history对象，必须满足以下两个条件：
 
-> 1. App组件必须包裹在`Router`组件之内；
-> 2. App组件使用`withRouter`高阶组件包裹；
+1. App组件必须包裹在`Router`组件之内；
+2. App组件使用`withRouter`高阶组件包裹；
 
 index.js代码修改如下：
 
-```js
+```jsx
 ReactDOM.render(
   <BrowserRouter>
     <App />
@@ -463,7 +465,7 @@ ReactDOM.render(
 
 App.js代码修改如下：
 
-```js
+```jsx
 import { Route, Switch, NavLink, withRouter } from 'react-router-dom';
 
 class App extends PureComponent {
@@ -514,7 +516,7 @@ export default withRouter(App);
 
 通常情况下，使用动态路由可以为路由传递参数。
 
-```js
+```jsx
 <div>
   <NavLink to="/detail/abc123">详情</NavLink>
 
@@ -530,7 +532,7 @@ detail.js的代码如下：
 - 我们可以直接通过`match`对象中获取id；
 - 这里我们没有使用`withRouter`，原因是因为Detail本身就是通过路由进行的跳转；
 
-```js
+```jsx
 import React, { PureComponent } from 'react'
 
 export default class Detail extends PureComponent {
@@ -552,7 +554,7 @@ NavLink写法：
 
 - 我们在跳转的路径中添加了一些query参数；
 
-```js
+```jsx
 <NavLink to="/detail2?name=why&age=18">详情2</NavLink>
 
 <Switch>
@@ -565,7 +567,7 @@ Detail2中如何获取呢？
 - Detail2中是需要在location中获取search的；
 - 注意：这个search没有被解析，需要我们自己来解析；
 
-```js
+```jsx
 import React, { PureComponent } from 'react'
 
 export default class Detail2 extends PureComponent {
@@ -585,7 +587,7 @@ export default class Detail2 extends PureComponent {
 
 `to`可以直接传入一个对象
 
-```js
+```jsx
 <NavLink to={{
     pathname: "/detail2", 
     query: {name: "kobe", age: 30},
@@ -598,7 +600,7 @@ export default class Detail2 extends PureComponent {
 
 获取参数：
 
-```js
+```jsx
 import React, { PureComponent } from 'react'
 
 export default class Detail2 extends PureComponent {
@@ -618,19 +620,17 @@ export default class Detail2 extends PureComponent {
 
 目前我们所有的路由定义都是直接使用Route组件，并且添加属性来完成的。
 
-但是这样的方式会让路由变得非常混乱，我们希望将所有的路由配置放到一个地方进行集中管理：
+但是这样的方式会让路由变得非常混乱，我们希望将所有的路由配置放到一个地方进行集中管理：这个时候可以使用`react-router-config`来完成；
 
-- 这个时候可以使用`react-router-config`来完成；
-
-安装react-router-config：
+1. 安装react-router-config：
 
 ```js
 yarn add react-router-config
 ```
 
-创建`src/router/index.js`文件：
+2. 创建`src/router/index.js`文件：
 
-```js
+```jsx
 import Home from "../pages/home";
 import About, { AboutMessage, AboutProduct } from "../pages/about";
 import Profile from "../pages/profile";
@@ -691,7 +691,7 @@ export default routes;
 
 修改app.js文件：将之前的`Switch`配置，换成`react-router-config`中提供的`renderRoutes`函数：
 
-```js
+```jsx
 //app.js
 import React,{ PureComponent } from 'react';
 import { renderRoutes } from 'react-router-config';
@@ -728,7 +728,7 @@ class App extends PureComponent{
 - 在跳转到的路由组件中会多一个 `this.props.route` 属性；
 - 该`route`属性代表当前跳转到的路由对象，可以通过该属性获取到 `routes`；
 
-```js
+```jsx
 export default class About extends PureComponent {
   render() {
     return (
@@ -747,7 +747,7 @@ export default class About extends PureComponent {
 
 - `matchRoutes(routes, pathname)`传入一个路由对象数组，获取所有匹配的路径；
 
-```js
+```jsx
 const routes = matchRoutes(this.props.route.routes, "/about");
 console.log(routes);
 ```
