--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -473,7 +473,7 @@ store.dispatch(decAction());
 
 5. 订阅者拿到最新的数据（在props中），更新到jsx中，界面发生改变；
 
-![图片](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/640-20210418224244024)
+![640-20210418224244024](./img/640-20210418224244024.png)
 
 # 8.react中使用redux
 
@@ -1485,8 +1485,6 @@ const composeEnhancers = window.__REDUX_DEVTOOLS_EXTENSION_COMPOSE__({trace: tru
 
 saga中间件使用了ES6的generator语法，所以我们有必须简单讲解一下：
 
-- 注意：我这里并没有列出generator的所有用法，事实上它的用法非常的灵活，大家可以自行去学习一下。
-
 在JavaScript中编写一个普通的函数，进行调用会立即拿到这个函数的返回结果：
 
 ```js
@@ -1637,7 +1635,7 @@ export default mySaga;
 
 4. redux-saga的使用
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 
 // import {connect} from '../utils/connect';
@@ -1687,10 +1685,6 @@ const mapDispatchToProps = dispatch => ({
 
 export default connect(mapStateToProps, mapDispatchToProps)(Home);
 ```
-
-
-
-
 
 ## 10.5中间件的原理
 
@@ -2220,7 +2214,7 @@ export default store;
 
 ### 11.2.4redux使用
 
-```js
+```jsx
 import React, { PureComponent } from 'react';
 
 // import {connect} from '../utils/connect';
@@ -2270,8 +2264,6 @@ const mapDispatchToProps = dispatch => ({
 
 export default connect(mapStateToProps, mapDispatchToProps)(Home);
 ```
-
-
 
 ## 11.3combineReducers
 
