--- a/javascript/ES6/08.数组的扩展.md
+++ b/javascript/ES6/08.数组的扩展.md
@@ -542,7 +542,7 @@ function ArrayOf(){
 }
 ```
 
-## 4.数组实例的 copyWithin()
+## 4.copyWithin()
 
 数组实例的`copyWithin()`方法，在当前数组内部，将指定位置的成员复制到其他位置（会覆盖原有成员），然后返回当前数组。也就是说，使用这个方法，会修改当前数组。
 
