--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -352,13 +352,13 @@ export default function CounterTitle02() {
 
 2. useEffect要求我们传入一个`回调函数`，在React执行完更新DOM操作之后，就会`执行这个回调函数`；
 
-3. 默认情况下，无论是第一次渲染之后，还是每次更新之后，都会执行这个 `回调函数`；
+3. 默认情况下，无论是第一次渲染之后，还是每次更新之后，都会执行这个`回调函数`；
 
 ## 4.2清除useEffect
 
-在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线
+在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线或Redux中手动调用
 
-或Redux中手动调用subscribe，都需要在componentWillUnmount有对应的取消订阅。
+subscribe，都需要在componentWillUnmount有对应的取消订阅。
 
 useEffect传入的`回调函数A本身`可以有一个返回值，这个返回值是`另外一个回调函数B`:
 
@@ -398,7 +398,7 @@ export default function EffectHookClear() {
 > 为什么要在useEffect中返回一个函数？
 >
 > 1. 这是effect可选的清除机制。每个effect都可以返回一个清除函数；
-> 2. 如此可以将添加和移除订阅的逻辑放在一起,它们都属于 effect 的一部分；
+> 2. 如此可以将添加和移除订阅的逻辑放在一起,它们都属于effect的一部分；
 
 > **React何时清除effect？**
 >
