--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -356,9 +356,7 @@ export default function CounterTitle02() {
 
 ## 4.2清除useEffect
 
-在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线或Redux中手动调用
-
-subscribe，都需要在componentWillUnmount有对应的取消订阅。
+在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线或Redux中手动调用subscribe，都需要在componentWillUnmount有对应的取消订阅。
 
 useEffect传入的`回调函数A本身`可以有一个返回值，这个返回值是`另外一个回调函数B`:
 
@@ -445,7 +443,7 @@ export default function MultiUseEffect() {
 
 > React将按照effect声明的顺序依次调用组件中的每一个effect；
 
-## 4.4 useEffect性能优化
+## 4.4useEffect性能优化
 
 默认情况下，useEffect的回调函数会在每次渲染时都重新执行，但是这会导致两个问题：
 
