--- a/Axios/77.9K Star 的 Axios 项目有哪些值得借鉴的地方.md
+++ b/Axios/77.9K Star 的 Axios 项目有哪些值得借鉴的地方.md
@@ -13,7 +13,7 @@
 
 在浏览器端 Axios 支持大多数主流的浏览器，比如 Chrome、Firefox、Safari 和 IE 11。此外，Axios 还拥有自己的生态：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/401a5dca5b9d411d8d009c70e7de3b02~tplv-k3u1fbpfcp-zoom-1.image)
+![401a5dca5b9d411d8d009c70e7de3b02~tplv-k3u1fbpfcp-zoom-1](./img/401a5dca5b9d411d8d009c70e7de3b02~tplv-k3u1fbpfcp-zoom-1-8244281.png)
 
 # 二、HTTP 拦截器的设计与实现
 
@@ -25,7 +25,9 @@
 
 [Axios](https://github.com/axios/axios) 是一个基于 Promise 的 HTTP 客户端，而 HTTP 协议是基于请求和响应：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/dead7bc7edb2488981230ce634834c75~tplv-k3u1fbpfcp-zoom-1.image)
+
+
+![dead7bc7edb2488981230ce634834c75~tplv-k3u1fbpfcp-zoom-1](./img/dead7bc7edb2488981230ce634834c75~tplv-k3u1fbpfcp-zoom-1-8244244.png)
 
 所以 Axios 提供了请求拦截器和响应拦截器来分别处理请求和响应，它们的作用如下：
 
@@ -108,7 +110,7 @@ InterceptorManager.prototype.use = function use(fulfilled, rejected) {
 
 通过观察 `use` 方法，我们可知注册的拦截器都会被保存到 `InterceptorManager` 对象的 `handlers` 属性中。下面我们用一张图来总结一下 `Axios` 对象与 `InterceptorManager` 对象的内部结构与关系：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/98a62da97d49487bb294cb55715e6ff9~tplv-k3u1fbpfcp-zoom-1.image)
+![98a62da97d49487bb294cb55715e6ff9~tplv-k3u1fbpfcp-zoom-1](./img/98a62da97d49487bb294cb55715e6ff9~tplv-k3u1fbpfcp-zoom-1-8244320.png)
 
 ## 2.3 任务编排
 
@@ -157,7 +159,7 @@ Axios.prototype.request = function request(config) {
 
 任务编排的代码比较简单，我们来看一下任务编排前和任务编排后的对比图：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/9b660c577cf2498e95b995f4bb804cd0~tplv-k3u1fbpfcp-zoom-1.image)
+![9b660c577cf2498e95b995f4bb804cd0~tplv-k3u1fbpfcp-zoom-1](./img/9b660c577cf2498e95b995f4bb804cd0~tplv-k3u1fbpfcp-zoom-1-8244359.png)
 
 ## 2.4 任务调度
 
@@ -176,7 +178,7 @@ Axios.prototype.request = function request(config) {
 
 因为 chain 是数组，所以通过 while 语句我们就可以不断地取出设置的任务，然后组装成 Promise 调用链从而实现任务调度，对应的处理流程如下图所示：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/12cbfa5ce9aa4983b80a039eb5e5d83b~tplv-k3u1fbpfcp-zoom-1.image)
+![12cbfa5ce9aa4983b80a039eb5e5d83b~tplv-k3u1fbpfcp-zoom-1](./img/12cbfa5ce9aa4983b80a039eb5e5d83b~tplv-k3u1fbpfcp-zoom-1-8244393.png)
 
 下面我们来回顾一下 Axios 拦截器完整的使用流程：
 
@@ -205,7 +207,7 @@ axios({
 
 参考 Axios 拦截器的设计模型，我们就可以抽出以下通用的任务处理模型：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/be735bf156b94479807cac30f42d89da~tplv-k3u1fbpfcp-zoom-1.image)
+![be735bf156b94479807cac30f42d89da~tplv-k3u1fbpfcp-zoom-1](./img/be735bf156b94479807cac30f42d89da~tplv-k3u1fbpfcp-zoom-1-8244429.png)
 
 # 三、HTTP 适配器的设计与实现
 
@@ -314,7 +316,7 @@ axios.get("/users").then(function (response) {
 
 对 MockAdapter 感兴趣的小伙伴，可以自行了解一下 [axios-mock-adapter](https://github.com/ctimmerm/axios-mock-adapter) 这个库。到这里我们已经介绍了 Axios 的拦截器与适配器，下面阿宝哥用一张图来总结一下 Axios 使用请求拦截器和响应拦截器后，请求的处理流程：
 
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/f187b4a4c0304273839cdb76108a3261~tplv-k3u1fbpfcp-zoom-1.image)
+![f187b4a4c0304273839cdb76108a3261~tplv-k3u1fbpfcp-zoom-1](./img/f187b4a4c0304273839cdb76108a3261~tplv-k3u1fbpfcp-zoom-1-8244469.png)
 
 # 四、CSRF 防御
 
@@ -326,8 +328,7 @@ axios.get("/users").then(function (response) {
 
 为了让小伙伴更好地理解上述的内容，阿宝哥画了一张跨站请求攻击示例图：
 
-
-![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/9ed364a3cf89457b9c25c79f6b6484f8~tplv-k3u1fbpfcp-zoom-1.image)
+![9ed364a3cf89457b9c25c79f6b6484f8~tplv-k3u1fbpfcp-zoom-1](./img/9ed364a3cf89457b9c25c79f6b6484f8~tplv-k3u1fbpfcp-zoom-1-8244509.png)
 
 在上图中攻击者利用了 Web 中用户身份验证的一个漏洞：**简单的身份验证只能保证请求发自某个用户的浏览器，却不能保证请求本身是用户自愿发出的**。既然存在以上的漏洞，那么我们应该怎么进行防御呢？接下来我们来介绍一些常见的 CSRF 防御措施。
 
