--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -1686,9 +1686,9 @@ img{
 
 ## 7.其他样式
 
-### 7.1鼠标样式cursor
+### 7.1鼠标样式:cursor
 
- 设置或检索在对象上移动的鼠标指针采用何种系统预定义的光标形状。
+设置或检索在对象上移动的鼠标指针采用何种系统预定义的光标形状。
 
 | 属性值          | 描述       |
 | --------------- | ---------- |
@@ -1701,8 +1701,6 @@ img{
 ### 7.2轮廓线outline
 
 是绘制于元素周围的一条线，位于边框边缘的外围，可起到突出元素的作用。 
-
-语法：
 
 ```css
 outline:outline-color ||outline-style || outline-width 
@@ -1724,7 +1722,7 @@ outline:outline-color ||outline-style || outline-width
 <textarea  style="resize: none;"></textarea>
 ```
 
-### 7.4vertical-align 垂直对齐
+### 7.4垂直对齐:vertical-align
 
 - 有宽度的块级元素居中对齐，是`margin: 0 auto;`
 - 让文字居中对齐，是`text-align: center;`
@@ -1733,33 +1731,32 @@ outline:outline-color ||outline-style || outline-width
 
 > `vertical-align` 垂直对齐，它只针对于**行内元素**或者**行内块元素**，
 
-语法：
-
 ```css
 vertical-align : baseline |top |middle |bottom 
 ```
 
 设置或检索对象内容的垂直对其方式。
 
-注意：
+> 注意：
+>
+> - `vertical-align` 不影响块级元素中的内容对齐，它只针对于**行内元素**或者**行内块元素**，
+> - 特别是行内块元素， **通常用来控制图片/表单与文字的对齐**。
 
-- `vertical-align` 不影响块级元素中的内容对齐，它只针对于**行内元素**或者**行内块元素**，
 
-- 特别是行内块元素， **通常用来控制图片/表单与文字的对齐**。
 
 #### 7.4.1图片、表单和文字对齐
 
 所以我们知道，我们可以通过`vertical-align` 控制图片和文字的垂直关系了(给图片设置此样式)。 默认的图片会和文字基线对齐。
 
-![基线对齐](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/基线对齐.jpg)
+![baseline](./img/baseline.jpg)
 
 
 
-![image-20200327000852007](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200327000852007.png)
+![image-20200327000852007](./img/image-20200327000852007.png)
 
 #### 7.4.2去除图片底侧空白缝隙
 
-![image-20200327000907832](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200327000907832.png)
+![image-20200327000907832](./img/image-20200327000907832.png)
 
 - 原因：
 
@@ -1777,24 +1774,22 @@ vertical-align : baseline |top |middle |bottom
 `white-space`设置或检索对象内文本显示方式。通常我们使用于强制一行显示内容 。
 
 ```css
-white-space:normal;		/*默认值，当文字一行显示不下时就会自动换行*/
+white-space:normal;		/* 默认值，当文字一行显示不下时就会自动换行 */
 
-white-space:nowrap;		/*强制在同一行内显示所有文本，直到文本结束或者遭遇br标签对象才换行。*/
+white-space:nowrap;		/* 强制在同一行内显示所有文本，直到文本结束或者遭遇br标签对象才换行。*/
 ```
 
 #### 7.5.2text-overflow 文字溢出
 
-设置或检索是否使用一个省略标记（...）标示对象内文本的溢出
+设置或检索是否使用一个省略标记（...）标示对象内文本的溢出。
 
 ```css
-text-overflow : clip;		/*不显示省略标记（...），而是简单的裁切*/
+text-overflow : clip;		/* 不显示省略标记（...），而是简单的裁切*/
 
 text-overflow：ellipsis;		/*当对象内文本溢出时显示省略标记（...）*/
 ```
 
-**注意**：
-
-一定要首先强制一行内显示，再次和`overflow`属性搭配使用
+> 注意：一定要首先强制一行内显示，再和`overflow`属性搭配使用
 
 示例：
 
@@ -1807,17 +1802,12 @@ text-overflow：ellipsis;		/*当对象内文本溢出时显示省略标记（...
       text-overflow: ellipsis;
 ```
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200909214448621.png" alt="image-20200909214448621" style="zoom:50%;" />
+![image-20200909214448621](./img/image-20200909214448621.png)
 
 ### 7.6百分比参照于谁
 
-- `width margin padding`参照与包含块的`width`
-
-- `height`参照与包含块的`height`		
-
-- `left`参照与包含块的`width`
-
-- `top`参照与包含块的`height`
+- `width left margin padding`参照与包含块的`width`
+- `height top`参照与包含块的`height`		
 
 ### 7.7滚动条
 
@@ -1885,9 +1875,9 @@ width默认值为auto。
 
 ### 9.1层叠性
 
-所谓层叠性是指多种CSS样式的叠加。
+所谓层叠性是指多种CSS样式的叠加。是浏览器处理冲突的一个能力，如果一个属性通过两个相同选择器设置到同一个元素上，
 
-是浏览器处理冲突的一个能力，如果一个属性通过两个相同选择器设置到同一个元素上，那么这个时候一个属性就会将另一个属性层叠掉。
+那么这个时候一个属性就会将另一个属性层叠掉。
 
 原则：
 
@@ -2069,15 +2059,13 @@ css:
 
 * 盒子模型有元素的内容（content）、边框（border）、内边距（padding）、和外边距（margin）组成。
 * 盒子里面的文字和图片等元素是内容区域
-* 盒子的厚度 我们成为 盒子的边框 
+* 盒子的厚度我们称为盒子的边框 
 * 盒子内容与边框的距离是内边距（类似单元格的 cellpadding)
 * 盒子与盒子之间的距离是外边距（类似单元格的 cellspacing）
 
-![标准盒子模型](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/标准盒子模型.png)
+![content-box](./img/content-box.png)
 
 ### 10.1盒子边框
-
-语法：
 
 ```css
 border : border-width || border-style || border-color 
@@ -2164,13 +2152,13 @@ input{
 
 效果：
 
-![image-20200902191950630](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200902191950630.png)
+![image-20200902191950630](./img/image-20200902191950630.png)
 
 #### 10.1.3表格的细线边框
 
-- 通过表格的`cellspacing="0"`,将单元格与单元格之间的距离设置为0，
+- 通过表格的`cellspacing="0"`,将单元格与单元格之间的距离设置为0。
 
-- 但是两个单元格之间的边框会出现重叠，从而使边框变粗
+- 但是两个单元格之间的边框会出现重叠，从而使边框变粗。
 
 - 通过css属性设置边框：
 
@@ -2197,7 +2185,7 @@ table {
 		text-align: center;
 	}
 	table, td {
-		border-collapse: collapse;  /*合并相邻边框*/
+		border-collapse: collapse;  /* 合并相邻边框*/
 	}
 ```
 
@@ -2209,10 +2197,8 @@ table {
 
 - 当使用两个半径时确定一个椭圆，这个(椭)圆与边框的交集形成圆角效果。
 
-语法：
-
 ```css
-border-radius:length;  /*其中每一个值可以为 数值或百分比的形式。*/
+border-radius:length;  /* 其中每一个值可以为 数值或百分比的形式。*/
 ```
 
 **取值类型：**
@@ -2224,13 +2210,13 @@ border-radius:length;  /*其中每一个值可以为 数值或百分比的形式
 
 ```css
 div{
-  /*左上圆角*/
+  /* 左上圆角 */
 	border-top-left-radius:30px;
-  /*右上圆角*/
+  /* 右上圆角 */
 	border-top-right-radius:30px;
-  /*右下圆角*/
+  /* 右下圆角 */
 	border-bottom-right-radius:30px;
-  /*左下圆角*/
+  /* 左下圆角 */
 	border-bottom-left-radius:30px;
 }
 /*半径的第一个语法取值个数可取1~4个值:*/
@@ -2260,14 +2246,14 @@ div {
         width: 10px;
         height: 10px;
         background: tomato;
-  			/*为正方形宽度的一半就是圆*/
+  			/* 为正方形宽度的一半就是圆*/
   			border-radius:5px;
   			/*与下面样式等价*/
         border-radius: 50%;/*百分比值表示高度和宽度的一半。因此只适合正方形设置为圆*/
 }
 ```
 
-![image-20200903155741335](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903155741335.png)
+![image-20200903155741335](./img/image-20200903155741335.png)
 
 > 风车
 
@@ -2311,7 +2297,7 @@ css:
 }
 ```
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903160353855.png" alt="image-20200903160353855" style="zoom:50%;" />
+![image-20200903160353855](./img/image-20200903160353855.png)
 
 总结：如果为矩形，则使用px值设置为圆角边框。如果为正方形，则用百分比设置为圆形。
 
@@ -2326,14 +2312,14 @@ css:
 ```css
 div{
     width:0;
-    height:0;/*高度可以不为0*/
+    height:0;/* 高度可以不为0 */
     border:10px solid #fff;
     border-top-color:red;
 }
 /*原理：将所有边框颜色设置为透明或者白色，然后单独设置需要显示上边框的颜色*/
 ```
 
-![image-20200903152504641](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903152504641.png)
+![image-20200903152504641](./img/image-20200903152504641.png)
 
 > 直线
 
@@ -2360,7 +2346,7 @@ div {
 /*原理：当盒子宽高不为0时，边框宽度为1px时，边框形状是一条直线*/
 ```
 
-![image-20200903153121633](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903153121633.png)
+![image-20200903153121633](./img/image-20200903153121633.png)
 
 > 梯形
 
@@ -2374,7 +2360,9 @@ div {
 /**原理：当盒子宽高不为0时，当边框宽度大于1px时，边框形状为梯形*/
 ```
 
-![image-20200903153308471](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903153308471.png)
+
+
+![image-20200903153308471](./img/image-20200903153308471.png)
 
 > 四面三角形
 
@@ -2398,11 +2386,11 @@ div {
 */
 ```
 
-![image-20200903155439897](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903155439897.png)
+![image-20200903155439897](./img/image-20200903155439897.png)
 
 #### 10.1.6边框图片
 
-`border-image` 属性允许在元素的边框上绘制图像。这使得绘制复杂的外观组件更加简单，使用 `border-image` 时，其将会替换掉 `border-style` 属性所设置的边框样式。
+`border-image`属性允许在元素的边框上绘制图像。这使得绘制复杂的外观组件更加简单，使用 `border-image` 时，其将会替换掉 `border-style` 属性所设置的边框样式。
 
 默认值：不可继承
 
@@ -2418,7 +2406,7 @@ div{
 
 > border-image-source
 
-`border-image-source` 属性定义使用一张图片来代替边框样式；如果值为`none`，则仍然使用`border-style` 定义的样式。
+`border-image-source`属性定义使用一张图片来代替边框样式；如果值为`none`，则仍然使用`border-style` 定义的样式。
 
 默认值：none   不可继承
 
@@ -2480,7 +2468,7 @@ repeat，round（平铺）
 
 ### 10.2盒子内边距
 
-`padding`属性用于设置内边距。 **是指 边框与内容之间的距离。**
+`padding`属性用于设置内边距。 **是指边框与内容之间的距离。**
 
 | 属性           | 作用     |
 | -------------- | :------- |
@@ -2525,7 +2513,7 @@ div {
 
 
 
-![盒模型大小](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/盒模型大小.png)
+![content-size](./img/content-size.png)
 
 - 宽度
 
@@ -2558,7 +2546,7 @@ div {
 
 #### 10.2.1padding不影响盒子大小情况
 
-**如果没有给一个盒子指定宽度， 此时，如果给这个盒子指定padding， 则不会撑开盒子。**
+如果没有给一个盒子指定宽度， 此时如果给这个盒子指定padding， 则不会撑开盒子。
 
 ```css
 	p {	
@@ -2621,11 +2609,11 @@ css
 
 效果：
 
-![image-20200902233845275](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200902233845275.png)
+![image-20200902233845275](./img/image-20200902233845275.png)
 
 ### 10.3外边距
 
-​	`margin`属性用于设置外边距。  `margin`就是控制**盒子和盒子之间的距离**
+`margin`属性用于设置外边距。`margin`就是控制盒子和盒子之间的距离。
 
 | 属性          | 作用     |
 | ------------- | :------- |
@@ -2634,14 +2622,14 @@ css
 | margin-top    | 上外边距 |
 | margin-bottom | 下外边距 |
 
-margin值的简写 （复合写法）代表意思 跟 padding 完全相同。
+margin值的简写（复合写法）代表意思跟padding完全相同。
 
 #### 10.3.1块级盒子水平居中
 
 可以让一个块级盒子实现水平居中：
 
-- 盒子必须指定了宽度（width）
-- 然后就给**左右的外边距都设置为auto**，
+- 盒子必须指定了宽度（width）。
+- 然后就给左右的外边距都设置为auto。
 
 实际工作中常用这种方式进行网页布局，示例代码如下：
 
@@ -2665,8 +2653,8 @@ div{margin: 0 auto;}
 
 #### 10.3.2文字居中和盒子居中区别
 
-1.  盒子内的文字水平居中是  `text-align: center`,  而且还可以让行内元素和行内块居中对齐
-2.  块级盒子水平居中  左右margin 改为 auto 
+1.  盒子内的文字水平居中是：`text-align: center`,  而且还可以让行内元素和行内块居中对齐
+2.  块级盒子水平居中：左右margin改为auto 
 
 ~~~css
 text-align: center; /*  文字 行内元素 行内块元素水平居中 */
@@ -2675,9 +2663,9 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 
 #### 10.3.3插入图片和背景图片区别
 
-1. 插入图片 我们用的最多 比如产品展示类  移动位置只能靠盒模型` padding margin`
+1. 插入图片：我们用的最多，比如产品展示类，移动位置只能靠盒模型` padding margin`
 
-2. 背景图片我们一般用于小图标背景或者超大背景图片，背景图片只能通过`background-position`
+2. 背景图片：我们一般用于小图标背景或者超大背景图片，背景图片只能通过`background-position`
 
 ~~~css
  img {  
@@ -2719,7 +2707,7 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 - 下面的元素有上外边距`margin-top`，则他们之间的垂直间距不是`margin-bottom`与`margin-top`之和
 - **取两个值中的较大者**这种现象被称为相邻块元素垂直外边距的合并（也称外边距塌陷）。
 
-![image-20200326222847477](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326222847477.png)
+![image-20200326222847477](./img/image-20200326222847477.png)
 
 **解决方案：尽量只给一个盒子添加margin值**。
 
@@ -2729,7 +2717,7 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 - 父元素的上外边距会与子元素的上外边距发生合并
 - 合并后的外边距为两者中的较大者
 
-![image-20200326222941394](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326222941394.png)
+![image-20200326222941394](./img/image-20200326222941394.png)
 
 **解决方案：**
 
@@ -2764,7 +2752,7 @@ css
 }
 ```
 
-![image-20200903233655002](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903233655002.png)
+![image-20200903233655002](./img/image-20200903233655002.png)
 
 解决办法：
 
@@ -2789,17 +2777,17 @@ css
 		}
 ```
 
-![image-20200903234103874](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903234103874.png)
+![image-20200903234103874](./img/image-20200903234103874.png)
 
 
 
 #### 10.3.6margin负值之美
 
-(1).浮动盒子边框叠加问题
+(1)浮动盒子边框叠加问题
 
 浮动的盒子，相邻边框会紧挨着(而不是重叠)，就会使边框比其他地方更宽。
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200909235704768.png" alt="image-20200909235704768" style="zoom:50%;" />
+<img src="./img/image-20200909235704768.png" alt="image-20200909235704768" style="zoom:50%;" />
 
 使用margin负值解决浮动边框问题:
 
@@ -2815,7 +2803,7 @@ div {
 		}
 ```
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200909235850300.png" alt="image-20200909235850300" style="zoom:50%;" />
+<img src="./img/image-20200909235850300.png" alt="image-20200909235850300" style="zoom:50%;" />
 
 此时所有边框宽度都是一样的。
 
@@ -2844,11 +2832,11 @@ div {
 
 效果：
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200910000343505.png" alt="image-20200910000343505" style="zoom:50%;" />
+<img src="./img/image-20200910000343505.png" alt="image-20200910000343505" style="zoom:50%;" />
 
 如果不添加`position: relative;`属性，后面盒子则会压住前面盒子的边框：
 
-<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/image-20200910000548710.png" alt="image-20200910000548710" style="zoom:50%;" />
+<img src="./img/image-20200910000548710.png" alt="image-20200910000548710" style="zoom:50%;" />
 
 解决边框被后面盒子被压住问题：
 
@@ -2879,19 +2867,17 @@ div {
 
 ### 10.4盒子阴影
 
-语法：
-
 ```css
 box-shadow:水平阴影 垂直阴影 模糊距离（虚实）  阴影尺寸（影子大小，默认为盒子大小）  阴影颜色  内/外阴影；
 ```
 
-![image-20200326225734147](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326225734147.png)
+![image-20200326225734147](./img/image-20200326225734147.png)
 
 
 
 前两个属性是必须写的。其余的可以省略。
 
-外阴影 (outset) 是默认的，但是不能写 。 想要内阴影可以写 inset 
+外阴影 (outset) 是默认的，但是不能写。 想要内阴影可以写inset 
 
 ```css
 div {
@@ -2904,13 +2890,11 @@ div {
 }
 ```
 
-![image-20200904001138658](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200904001138658.png)
+![image-20200904001138658](./img/image-20200904001138658.png)
 
 ### 10.5倒影
 
 设置元素的倒影（`webkit`内核特有属性）
-
-语法：
 
 ```css
 -webkit-box-reflect:
@@ -2945,9 +2929,9 @@ resize:vertical;
 
 ### 10.7 box-sizing
 
-`box-sizing` 属性用于更改默认的 CSS 盒子模型。可以使用此属性来模拟不正确支持CSS盒子模型规范的浏览器的行列为。
+`box-sizing` 属性用于更改默认的CSS盒子模型。可以使用此属性来模拟不正确支持CSS盒子模型规范的浏览器的行列为。
 
-- 默认值：content-box  不可继承
+- 默认值：content-box 不可继承
 
 > 可选值：
 
@@ -2959,9 +2943,9 @@ resize:vertical;
  box-sizing:content-box;
 ```
 
-默认值，标准盒子模型。 width 与 height 只包括内容的宽和高， 不包括边框（border），内边距（padding），外边距（margin）。
+默认值:标准盒子模型。 width与height只包括内容的宽和高， 不包括边框（border），内边距（padding），外边距（margin）。
 
-注意: 内边距, 边框 & 外边距 都在这个盒子的外部。 比如. 如果` .box {width: 350px}`; 而且` {border: 10px solid black;}` 那么在浏览器中的渲染的实际宽度将是370px;
+> 注意: 内边距、边框 & 外边距都在这个盒子的外部。 比如：如果` .box {width: 350px}`; 而且` {border: 10px solid black;}` 那么在浏览器中的渲染的实际宽度将是370px;
 
 尺寸计算公式：
 
@@ -2975,7 +2959,7 @@ resize:vertical;
 box-sizing:border-box;
 ```
 
-width 和 height 属性包括内容，内边距和边框，但不包括外边距。这是当文档处于 Quirks模式时Internet Explorer使用的盒模型。
+width和height属性包括内容，内边距和边框，但不包括外边距。这是当文档处于Quirks模式时Internet Explorer使用的盒模型。
 
 尺寸计算公式：
 
@@ -2984,7 +2968,7 @@ width 和 height 属性包括内容，内边距和边框，但不包括外边距
 
 ## 11.浮动
 
-**浮动提升层级，并且只提升半层(元素层)**
+浮动提升层级，并且只提升半层(元素层)。
 
 ### 11.1 CSS 布局的三种机制
 
