--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -103,7 +103,7 @@ export default function Counter2() {
   ** 参数和返回值
   ** 1.参数：第一个参数是给创建出来的状态一个默认值
   ** 2.返回值为一个数组（只有两个值）：
-  **	第一个值为当前状态值
+  **  第一个值为当前状态值
   **  第二个值为一个函数，用于设置内部保存的状态
   **/
   const [count, setCount] = useState(0);// count默认值为0
@@ -356,7 +356,9 @@ export default function CounterTitle02() {
 
 ## 4.2清除useEffect
 
-在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线或Redux中手动调用subscribe，都需要在componentWillUnmount有对应的取消订阅。
+在class组件的编写过程中，某些副作用的代码，我们需要在componentWillUnmount中进行清除：比如我们之前的事件总线或Redux中手动调用
+
+subscribe，都需要在componentWillUnmount有对应的取消订阅。
 
 useEffect传入的`回调函数A本身`可以有一个返回值，这个返回值是`另外一个回调函数B`:
 
@@ -632,7 +634,7 @@ export default function Profile() {
 }
 ```
 
-数据是不会共享的，它们只是使用了相同的counterReducer的函数而已。
+> 数据是不会共享的，它们只是使用了相同的counterReducer的函数而已。
 
 **所以，useReducer只是useState的一种替代品，并不能替代Redux。**
 
