--- a/面试/100道前端优质面试题/1.数据结构和算法.md
+++ b/面试/100道前端优质面试题/1.数据结构和算法.md
@@ -8,7 +8,7 @@
 
 ## 1.2时间复杂度
 
-![image-20220726165109924](.\img\image-20220726165109924.png)
+![time](./img/time.png)
 
 - O(1) 一次就够(数量级)
 
@@ -46,3 +46,301 @@ function fn(arr=[]){
 ## 1.3空间复杂度
 
 程序执行时需要的内存空间。
+
+算法需要额外定义多少变量？
+
+- `O(1)` 定义了为数不多的变量，和 `n` 无关
+- `O(n)` 需要定义和 `n` 级别的变量，如额外复制一个同样的数组
+- 其他不常见
+
+前端算法通常不太考虑空间复杂度，或者它比时间复杂度要次要的多。
+
+因为前端环境，通常内存都是足够的，或者内存不够通常也是其他因素（如媒体文件）。
+
+# 2.旋转数组
+
+## 2.1题目
+
+定义一个函数，实现数组的旋转。如输入 `[1, 2, 3, 4, 5, 6, 7]` 和 `key = 3`， 输出 `[5, 6, 7, 1, 2, 3, 4]`。考虑时间复杂度和性能。
+
+## 2.2实现思路
+
+思路1
+
+- 将 `k` 后面的元素，挨个 `pop` 然后 `unshift` 到数组前面
+
+思路2
+
+- 将 `k` 后面的所有元素拿出来作为 `part1`
+- 将 `k` 前面的所有元素拿出来作为 `part2`
+- 返回 `part1.concat(part2)`
+
+## 2.3代码实现
+
+- 源码和性能测试:array-rotate.ts
+
+```typescript
+/**
+ * 旋转数组 k 步 - 使用 pop 和 unshift
+ * @param arr arr
+ * @param k k
+ * @returns arr
+ */
+export function rotate1(arr: number[], k: number): number[] {
+    const length = arr.length
+    if (!k || length === 0) return arr
+    const step = Math.abs(k % length) // abs 取绝对值
+
+    // O(n^2)
+    for (let i = 0; i < step; i++) {
+        const n = arr.pop()
+        if (n != null) {
+            arr.unshift(n) // 数组是一个有序结构，unshift 操作非常慢！！！ O(n)
+        }
+    }
+    return arr
+}
+
+/**
+ * 旋转数组 k 步 - 使用 concat
+ * @param arr arr
+ * @param k k
+ */
+ export function rotate2(arr: number[], k: number): number[] {
+    const length = arr.length
+    if (!k || length === 0) return arr
+    const step = Math.abs(k % length) // abs 取绝对值
+
+    // O(1)
+    const part1 = arr.slice(-step) // O(1)
+    const part2 = arr.slice(0, length - step)
+    const part3 = part1.concat(part2)
+    return part3
+}
+
+// // 功能测试
+// const arr = [1, 2, 3, 4, 5, 6, 7]
+// const arr1 = rotate2(arr, 3)
+// console.info(arr1)
+
+// // 性能测试
+// const arr1 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr1.push(i)
+// }
+// console.time('rotate1')
+// rotate1(arr1, 9 * 10000)
+// console.timeEnd('rotate1') // 885ms O(n^2)
+
+// const arr2 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr2.push(i)
+// }
+// console.time('rotate2')
+// rotate2(arr2, 9 * 10000)
+// console.timeEnd('rotate2') // 1ms O(1)
+
+```
+
+- 单元测试:
+
+```typescript
+// 使用的jest编写
+import { rotate1, rotate2 } from './array-rotate'
+
+describe('数组旋转', () => {
+    it('正常情况', () => {
+        const arr = [1, 2, 3, 4, 5, 6, 7]
+        const k = 3
+
+        const res = rotate2(arr, k)
+        expect(res).toEqual([5, 6, 7, 1, 2, 3, 4]) // 断言
+    })
+
+    it('数组为空', () => {
+        const res = rotate2([], 3)
+        expect(res).toEqual([]) // 断言
+    })
+
+    it('k 是负值', () => {
+        const arr = [1, 2, 3, 4, 5, 6, 7]
+        const k = -3
+
+        const res = rotate2(arr, k)
+        expect(res).toEqual([5, 6, 7, 1, 2, 3, 4]) // 断言
+    })
+
+    it('k 是 0',  () => {
+        const arr = [1, 2, 3, 4, 5, 6, 7]
+        const k = 0
+
+        const res = rotate2(arr, k)
+        expect(res).toEqual(arr) // 断言
+    })
+
+    it('k 不是数字', () => {
+        const arr = [1, 2, 3, 4, 5, 6, 7]
+        const k = 'abc'
+
+        // @ts-ignore
+        const res = rotate2(arr, k)
+        expect(res).toEqual(arr) // 断言
+    })
+})
+```
+
+经过性能测试，知道“思路2”性能更优。看来，思路简单并不一定性能最优。
+
+## 2.4性能对比
+
+时间复杂度
+
+- 思路1 - 看代码时间复杂度是 `O(n)`，**但数组是有序结构 `unshift` 本身就是 `O(n)` 复杂度**，所以实际复杂度是 `O(n^2)`
+- 思路2 - `O(1)`。`slice` 和 `concat` 不会修改原数组，而数组是有序结构，复杂度是 `O(1)` 。
+
+空间复杂度
+
+- 思路1 - `O(1)`
+- 思路2 - `O(n)`
+
+# 3.括号匹配
+
+## 3.1题目
+
+一个字符串内部可能包含 `{ }` `( )` `[ ]` 三种括号，判断该字符串是否是括号匹配的。如 `(a{b}c)` 就是匹
+
+配的， `{a(b` 和 `{a(b}c)` 就是不匹配的。
+
+## 3.2栈 Stack
+
+该题目的考察目的很明确——栈。
+
+栈：先进后出。基本的API
+
+- push
+- pop
+- length
+
+和栈相关的数据结构（后面讲）
+
+- 队列，先进先出
+- 堆，如常说的“堆栈模型”
+
+## 3.3逻辑结构和物理结构
+
+栈和数组有什么区别？——没有可比性，两者不一个级别。就像：房子和石头有什么区别？
+
+栈是一种逻辑结构，一种理论模型，它可以脱离编程语言单独讲。数组是一种物理结构，代码的实现，不同的语
+
+言，数组语法是不一样的。
+
+栈可以用数组来表达，也可以用链表来表达，也可以自定义 `class MyStack {...}` 自己实现。在 JS 中，
+
+栈一般情况下用数组实现。
+
+## 3.4思路
+
+- 遇到左括号 `{ ( [` 则压栈
+- 遇到右括号 `} ) ]` 则判断栈顶，相同的则出栈
+- 最后判断栈 length 是否为 0
+
+## 3.5代码实现
+
+```typescript
+/**
+ * 判断左右括号是否匹配
+ * @param left 左括号
+ * @param right 右括号
+ */
+function isMatch(left: string, right: string): boolean {
+    if (left === '{' && right === '}') return true
+    if (left === '[' && right === ']') return true
+    if (left === '(' && right === ')') return true
+    return false
+}
+
+/**
+ * 判断是否括号匹配
+ * @param str str
+ */
+export function matchBracket(str: string): boolean {
+    const length = str.length
+    if (length === 0) return true
+
+    const stack = []
+
+    const leftSymbols = '{[('
+    const rightSymbols = '}])'
+
+    for (let i = 0; i < length; i++) {
+        const s = str[i]
+
+        if (leftSymbols.includes(s)) {
+            // 左括号，压栈
+            stack.push(s)
+        } else if (rightSymbols.includes(s)) {
+            // 右括号，判断栈顶（是否出栈）
+            const top = stack[stack.length - 1]
+            if (isMatch(top, s)) {
+                stack.pop()
+            } else {
+                return false
+            }
+        }
+    }
+
+    return stack.length === 0
+}
+
+// // 功能测试
+// const str = '{a(b[c]d)e}f'
+// console.info(123123, matchBracket(str))
+```
+
+- 单元测试
+
+```typescript
+import { matchBracket } from './match-bracket'
+
+describe('括号匹配', () => {
+    it('正常情况', () => {
+        const str = '{a(b[c]d)e}f'
+        const res = matchBracket(str)
+        expect(res).toBe(true)
+    })
+
+    it('不匹配', () => {
+        const str = '{a(b[(c]d)e}f'
+        const res = matchBracket(str)
+        expect(res).toBe(false)
+    })
+
+    it('顺序不一致的', () => {
+        const str = '{a(b[c]d}e)f'
+        const res = matchBracket(str)
+        expect(res).toBe(false)
+    })
+
+    it('空字符串', () => {
+        const res = matchBracket('')
+        expect(res).toBe(true)
+    })
+})
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
