--- a/面试/100道前端优质面试题/1.数据结构和算法.md
+++ b/面试/100道前端优质面试题/1.数据结构和算法.md
@@ -191,6 +191,8 @@ describe('数组旋转', () => {
 
 经过性能测试，知道“思路2”性能更优。看来，思路简单并不一定性能最优。
 
+> 扩展：toEqual是判断对象或者数组的
+
 ## 2.4性能对比
 
 时间复杂度
@@ -230,13 +232,13 @@ describe('数组旋转', () => {
 
 栈和数组有什么区别？——没有可比性，两者不一个级别。就像：房子和石头有什么区别？
 
-栈是一种逻辑结构，一种理论模型，它可以脱离编程语言单独讲。数组是一种物理结构，代码的实现，不同的语
+- 栈是一种逻辑结构，一种理论模型，它可以脱离编程语言单独讲。
 
-言，数组语法是不一样的。
+- 数组是一种物理结构，代码的实现，不同的语言，数组语法是不一样的。
 
-栈可以用数组来表达，也可以用链表来表达，也可以自定义 `class MyStack {...}` 自己实现。在 JS 中，
+栈可以用数组来表达，也可以用链表来表达，也可以自定义 `class MyStack {...}` 自己实现。只是在 JS 
 
-栈一般情况下用数组实现。
+中，栈一般情况下用数组实现。
 
 ## 3.4思路
 
@@ -282,8 +284,10 @@ export function matchBracket(str: string): boolean {
             // 右括号，判断栈顶（是否出栈）
             const top = stack[stack.length - 1]
             if (isMatch(top, s)) {
+              // 括号匹配
                 stack.pop()
             } else {
+              // 括号不匹配
                 return false
             }
         }
@@ -328,19 +332,148 @@ describe('括号匹配', () => {
 })
 ```
 
+> 扩展：基本数据类型时使用toBe
 
+## 3.6性能分析
 
+时间复杂度：O(n)
 
+空间复杂度：O(n)
 
+# 4.用两个栈实现一个队列
 
+## 4.1题目
 
+请用两个栈，来实现队列的功能，实现功能 `add` `delete` `length` 。
 
+## 4.2队列 Queue
 
+栈，先进后出
 
+队列，先进先出，API 包括
 
+- add
+- delete
+- length
 
+常见的“消息队列”就是队列的一种应用场景
 
+- A 系统向 B 系统持续发送海量的消息
+- A 系统先把一条一条消息放在一个 queue
+- B 系统再从 queue 中逐条消费（按顺序，先进先出）
 
+## 4.3逻辑结构和物理结构
+
+队列和栈一样，是一种逻辑结构。它可以用数组、链表等实现。思考：用数组实现队列，性能会怎样 —— add 
+
+怎样？delete 怎样？
+
+复杂场景下（如海量数据，内存不够用）需要单独设计。
+
+## 4.4题目分析
+
+可画图分析：参考视频讲解
+
+- 队列 add
+  - 往 stack1 push 元素
+- 队列 delete
+  - 将 stack1 所有元素 pop 出来，push 到 stack2
+  - 将 stack2 执行一次 pop
+  - 再将 stack2 所有元素 pop 出来，push 进 stack1
+
+## 4.5代码实现
+
+```typescript
+export class MyQueue {
+    private stack1: number[] = []
+    private stack2: number[] = []
+
+    /**
+     * 入队
+     * @param n n
+     */
+    add(n: number) {
+        this.stack1.push(n)
+    }
+
+    /**
+     * 出队
+     */
+    delete(): number | null {
+        let res
+
+        const stack1 = this.stack1
+        const stack2 = this.stack2
+
+        // 将 stack1 所有元素移动到 stack2 中
+        while(stack1.length) {
+            const n = stack1.pop()
+            if (n != null) {
+                stack2.push(n)
+            }
+        }
+
+        // stack2 pop
+        res = stack2.pop()
+
+        // 将 stack2 所有元素“还给”stack1
+        while(stack2.length) {
+            const n = stack2.pop()
+            if (n != null) {
+                stack1.push(n)
+            }
+        }
+
+        return res || null
+    }
+
+    get length(): number {
+        return this.stack1.length
+    }
+}
+
+// // 功能测试
+// const q = new MyQueue()
+// q.add(100)
+// q.add(200)
+// q.add(300)
+// console.info(q.length)
+// console.info(q.delete())
+// console.info(q.length)
+// console.info(q.delete())
+// console.info(q.length)
+```
+
+- 单元测试
+
+```typescript
+import { MyQueue } from './two-stacks-one-queue'
+
+describe('两个栈，一个队列', () => {
+    it('add and length', () => {
+        const q = new MyQueue()
+        expect(q.length).toBe(0)
+
+        q.add(100)
+        q.add(200)
+        q.add(300)
+        expect(q.length).toBe(3)
+    })
+
+    it('delete', () => {
+        const q = new MyQueue()
+        expect(q.delete()).toBeNull()
+
+        q.add(100)
+        q.add(200)
+        q.add(300)
+        expect(q.delete()).toBe(100)
+        expect(q.length).toBe(2)
+        expect(q.delete()).toBe(200)
+        expect(q.length).toBe(1)
+    })
+})
+```
 
 
 
