--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -854,21 +854,17 @@ function About(props) {
   )
 }
 
-const mapStateToProps = state => {
-  return {
-    counter: state.counter
-  }
-};
-const mapDispatchToProps = dispatch => {
-  return {
-    decrement: function() {
+const mapStateToProps = state => ({
+	counter: state.counter
+});
+const mapDispatchToProps = dispatch => ({
+	decrement: function() {
       dispatch(decAction());
     },
     subNumber: function(num) {
       dispatch(subAction(num))
     }
-  }
-};
+});
 
 export default connect(mapStateToProps, mapDispatchToProps)(About);
 ```
@@ -1394,7 +1390,7 @@ const store = createStore(reducer, enhancer);
 
 ### 10.2.3定义返回一个函数的action
 
-注意：这里不是返回一个对象了，而是一个函数；
+> 注意：这里不是返回一个对象了，而是一个函数；
 
 该函数在dispatch之后会被执行；
 
